# breached-teamspeak

./: .gitignore  .gitmodules  .wakatime-project  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
cmake/modules/: BuildType.cmake  Git.cmake  Project.cmake  SafeGuard.cmake  Utils.cmake
config/: library.json  plugin.json
include/breached-teamspeak/: plugin.h  teamspeak.h
src/: breached-plugin.cpp  build.h  plugin.cpp  plugin.h  teamspeak.cpp
src/core/: plugin.cpp
